--- a/package.json
+++ b/package.json
@@ -9,18 +9,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^1.2.5",
+    "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.0",
+    "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
+    "prettier": "^1.19.1",
     "prettierrc": "0.0.0-5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.0"
+    "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
+    "react-redux-toastr": "^7.6.10",
+    "react-router-dom": "^6.8.0",
+    "redux": "^4.2.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-redux-toastr": "^7.6.2",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitejs/plugin-react-swc": "^3.0.1",
