--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-error-boundary": "^3.1.4",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.4.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-redux-toastr": "^7.6.10",
